namespace LanguageTutor.Models
{
	public enum CheckResultType
	{
		None,
		Ok,
		Misspelled,
		Skipped,
	}
}
