---
title: Vocabulary Coach
---

classDiagram
direction BT

class Language {
    +string Id
    +string Name
}

class LanguageText {
    +string Id
    +Language Language
    +string Text
    +string Note
}

class Translation {
    +LanguageText LanguageText1
    +LanguageText LanguageText2
}

class StudiedText {
    +LanguageText LanguageText
    +CheckResult[] CheckResults
}

class CheckResult {
    +DateTimeOffset DateTime
    +CheckResultType CheckResultType
}

class CheckResultType {
    <<enumeration>>
    Ok
    Misspelled
    Skipped
}

class StudiedTextWithTranslation {
    +StudiedText StudiedText
    +LanguageText TextInKnownLanguage
}

LanguageText o-- Language
Translation o-- LanguageText
StudiedText o-- LanguageText
StudiedText *-- CheckResult
CheckResult *-- CheckResultType

StudiedTextWithTranslation o-- StudiedText
StudiedTextWithTranslation o-- LanguageText
